# Mobius1v2

./: .env.example  .gitignore  API-DOCUMENTATION.md  ASYNC_AND_REVIEW_FIX.md  AUDIT-TIMEOUT-FIX.md  AUTO-CORRECTION-FIX.md  BRAND-GRAPH-API.md  BRAND_LOGO_ENHANCEMENT.md  BRAND_SELECTOR_IMPLEMENTATION.md  BRAND_SELECTOR_LAYOUT_FIX.md  BRAND_SELECTOR_VISUAL_IMPROVEMENTS.md  BUG_REPORT_LOGO_PRESERVATION_FIX.md  COMPLETE-LOGO-FIX-SUMMARY.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT_CHECKLIST.md  DOWNLOAD_BUTTON_FIX.md  FINAL-SUMMARY.md  FIXES-APPLIED.md  FIXES_SUMMARY.md  FLICKERING_FIX.md  GEMINI_ANALYSIS_FIX.md  GENERATION-ERROR-FIX.md  GRAPH-DATABASE-EVALUATION.md  GRAPH-PERFORMANCE-ANALYSIS.md  GRAPH-SCHEMA-DESIGN.md  LOGO-INTEGRATION-PLAN.md  LOGO-URL-FIX.md  MOAT.md  MOBIUS-ARCHITECTURE.md  MULTI-TURN-FIX-COMPLETE.md  MULTI-TURN-TWEAK-FEATURE.md  NEO4J_MOAT_GAP_ANALYSIS.md  NEO4J_MOAT_QUERIES.md  NEO4J_ROUTING_FIX.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_QUICK_FIXES.md  PROMPT-ENHANCEMENTS-SUMMARY.md  QUICK-REFERENCE.md  README.md  (+35 more)
docs/: COVERAGE-PROGRESS.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT-SUMMARY.md  PHASE-2-VERIFICATION.md  PROJECT-STATUS.md  TEST-COVERAGE-SUMMARY.md  TEST-SUITE-SUMMARY.md  learning-privacy-compliance.md  private-learning-enhancements.md  testing-notes.md
frontend/: .env.example  DEPLOYMENT.md  ORGANISM_DEMO_GUIDE.md  ORGANISM_FIXES_SUMMARY.md  README.md  REFRESH_INSTRUCTIONS.md  VISUAL_TESTING.md  analyze-ui.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  (+2 more)
(+419 files in other folders)
